# MOSAIC-Context-Manager

./: .gitignore  HOW_TO_RUN.md  README.md  pyproject.toml
corpus/: README.md  generate_corpus.py  generate_eval.py
docs/: ARCHITECTURE.md  DEVELOPMENT.md  QUICKSTART.md
examples/: README.md  principals.generic.sample.json  principals.sample.json  project_docs_manifest.json
mosaic/: __init__.py  audit.py  auth.py  cli.py  corpus_builder.py  evaluator.py  ingestor.py  ledger.py  mcp_server.py  optimizer.py  perf.py  report.py  retriever.py  service.py  signal.py  types.py  ui.py  utils.py  workspace.py
tests/: helpers.py  test_audit_cli.py  test_auth.py  test_corpus_builder.py  test_demo_cli.py  test_doctor_cli.py  test_evaluator.py  test_ingestor_manifest.py  test_ledger.py  test_mcp.py  test_optimizer.py  test_perf.py  test_pipeline.py  test_real_corpus_service.py  test_retriever.py  test_service.py  test_signal.py  test_ui.py  test_utils.py
