[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mosaic-rag"
version = "0.7.0"
description = "MOSAIC retrieval optimizer with synthetic corpus generation, evaluation, auditing, MCP serving, and offline reporting"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "OpenAI Codex" }
]
dependencies = [
  "anthropic>=0.91.0",
  "chromadb>=1.5.6",
  "mcp>=1.27,<2",
  "numpy>=2.4.0",
  "plotly>=6.6.0",
  "rank-bm25>=0.2.2",
  "sentence-transformers>=5.3.0",
  "tiktoken>=0.12.0"
]

[project.optional-dependencies]
jax = ["jax>=0.9.2"]
dev = ["pytest>=9.0.0"]

[project.scripts]
mosaic = "mosaic.cli:main"

[tool.setuptools.packages.find]
include = ["mosaic*"]
